--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -203,7 +203,7 @@
                                     </div>
                                 </td>
                             </tr>
-                            <tr class="design-row">
+                            <tr class="design-row" style="{{{drawLengthStyle data.data.bowDesign.targetDrawLength data.data.bowDesign.maxDrawLength}}}">
                                 <td style="width: 150px">
                                     Target Draw Length
                                 </td>
@@ -451,7 +451,7 @@
                                 </td>
                             </tr>
 
-                            <tr class="design-row">
+                            <tr class="design-row"  style="{{{deflectionStyle data.data.bowDesign.deflection}}}">
                                 <td style="width: 150px">
                                     Deflection
                                 </td>
@@ -731,7 +731,7 @@
                         {{#each data.data.bowDesign.arrows as |arrow id|}}
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Projectile {{id}} <a class="deleteArrowRow" id="arroww{{id}}" title="Delete Row"><i class="fas fa-trash"></i></a></h2>
                         <table>
-                            <tr class="design-row">
+                            <tr class="design-row" style="{{{shaftLengthStyle arrow.validShaft}}}">
                                 <td style="width: 150px">
                                     Shaft Length:
                                 </td>
