#53 Added ACC and Range calculations

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -732,7 +732,7 @@
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Projectile {{id}} <a class="deleteArrowRow" id="arroww{{id}}" title="Delete Row"><i class="fas fa-trash"></i></a></h2>
                         <table>
                             <tr class="design-row" style="{{{shaftLengthStyle arrow.validShaft}}}">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Shaft Length:
                                 </td>
                                 <td>
@@ -746,7 +746,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Shaft Material
                                 </td>
                                 <td>
@@ -768,7 +768,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Shaft Material Essential
                                 </td>
                                 <td>
@@ -782,7 +782,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Arrow Quality:
                                 </td>
                                 <td>
@@ -802,7 +802,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Arrow Outer Diameter
                                 </td>
                                 <td>
@@ -817,7 +817,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Arrow Inner Diameter
                                 </td>
                                 <td>
@@ -831,7 +831,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Damage Type
                                 </td>
                                 <td>
@@ -851,7 +851,7 @@
                                 </td>
                             </tr>
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Armour Divisor
                                 </td>
                                 <td>
@@ -871,7 +871,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Barbed
                                 </td>
                                 <td>
@@ -890,7 +890,7 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Arrowhead Weight: {{arrow.arrowhead.weight}} lbs
                                 </td>
                                 <td>
@@ -904,13 +904,41 @@
                             </tr>
 
                             <tr class="design-row">
-                                <td style="width: 150px">
+                                <td style="width: 160px">
                                     Resulting arrow stats:
                                 </td>
                                 <td>
                                     {{arrow.weight}} lbs, {{arrow.cost}} $
                                 </td>
                                 <td class="question-container" id="arrow-stats">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 160px">
+                                    Damage Output:
+                                </td>
+                                <td>
+                                    {{arrow.damagePoints}} / {{arrow.dice}}
+                                </td>
+                                <td class="question-container" id="damage-points">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 160px">
+                                    Acc and Range:
+                                </td>
+                                <td>
+                                    Acc: {{arrow.acc}}, Range: {{arrow.halfRange}} / {{arrow.range}}
+                                </td>
+                                <td class="question-container" id="acc-range">
                                     <div class="question-button">
                                         <i class="fas fa-question"></i>
                                     </div>
