All occurrences of armor replaced with armour

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -504,7 +504,7 @@
 							{{/if}}
 						</td>
 						<td>
-							{{melee.damage}} {{melee.damageType}} ({{melee.armorDivisor}})
+							{{melee.damage}} {{melee.damageType}} ({{melee.armourDivisor}})
 							<label class="fa fa-dice-six rollable" data-level="{{melee.damage}}"
 								   data-label="Makes a &lt;b&gt;{{item.name}} {{melee.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
 						</td>
@@ -540,7 +540,7 @@
 						</td>
 						<td>{{ranged.acc}}</td>
 						<td>
-							{{ranged.damage}} {{ranged.damageType}} ({{ranged.armorDivisor}})
+							{{ranged.damage}} {{ranged.damageType}} ({{ranged.armourDivisor}})
 							<label for="ranged.damage" class="fa fa-dice-six rollable" data-level="{{ranged.damage}}"
 								   data-label="Makes a &lt;b&gt;{{item.name}} {{ranged.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
 						</td>
@@ -574,7 +574,7 @@
 								   data-label="Casts &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt;" data-type="skill"></label>
 						</td>
 						<td>
-							{{affliction.damage}} {{affliction.damageType}} ({{affliction.armorDivisor}})
+							{{affliction.damage}} {{affliction.damageType}} ({{affliction.armourDivisor}})
 							<label class="fa fa-dice-six rollable" data-level="{{affliction.damage}}"
 								   data-label="Makes a &lt;b&gt;{{item.name}} {{affliction.name}}&lt;/b&gt; Damage roll." data-type="damage"></label>
 						</td>
