--- a/templates/item/Trait-sheet.html
+++ b/templates/item/Trait-sheet.html
@@ -131,7 +131,7 @@
                         </td>
                         <td>
                             <span class="tooltip">
-                                <input type="text" name="data.melee.{{id}}.armorDivisor" value="{{melee.armorDivisor}}" title="{{melee.armorDivisor}}" style="text-align:left;" />
+                                <input type="text" name="data.melee.{{id}}.armourDivisor" value="{{melee.armourDivisor}}" title="{{melee.armourDivisor}}" style="text-align:left;" />
                                 <span class="tooltiptext" style="margin-left: -100px">
                                     <div>
                                         Default is 1<br>
@@ -212,7 +212,7 @@
                         </td>
                         <td>
                             <span class="tooltip">
-                                <input type="text" name="data.ranged.{{id}}.armorDivisor" value="{{ranged.armorDivisor}}" title="{{ranged.armorDivisor}}" style="text-align:left;" />
+                                <input type="text" name="data.ranged.{{id}}.armourDivisor" value="{{ranged.armourDivisor}}" title="{{ranged.armourDivisor}}" style="text-align:left;" />
                                 <span class="tooltiptext" style="margin-left: -100px">
                                     <div>
                                         Default is 1<br>
@@ -306,7 +306,7 @@
                         </td>
                         <td>
                             <span class="tooltip">
-                                <input type="text" name="data.affliction.{{id}}.armorDivisor" value="{{affliction.armorDivisor}}" title="{{affliction.armorDivisor}}" style="text-align:left; width: 40px;" />
+                                <input type="text" name="data.affliction.{{id}}.armourDivisor" value="{{affliction.armourDivisor}}" title="{{affliction.armourDivisor}}" style="text-align:left; width: 40px;" />
                                 <span class="tooltiptext" style="margin-left: -100px">
                                     <div>
                                         Default is 1<br>
