--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -33,12 +33,12 @@
                 </div>
                 <div id="value" class="equipmentStatLong">
                     <label class="resource-label">Value:</label>
-                    <input type="number" name="data.cost" value="{{data.data.cost}}" data-dtype="Number"/>
+                    <label class="resource-label">{{data.data.cost}}$</label>
                     <label class="resource-label"> / {{data.data.ttlCost}}$ total</label>
                 </div>
                 <div id="weight" class="equipmentStatLong">
                     <label class="resource-label">Weight:</label>
-                    <input type="number" name="data.weight" value="{{data.data.weight}}" data-dtype="Number"/>
+                    <label class="resource-label">{{data.data.weight}}lbs</label>
                     <label class="resource-label"> / {{data.data.ttlWeight}}lbs total</label>
                 </div>
             </div>
