--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -189,6 +189,7 @@
                         {{#each data.data.armour.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
                         {{#if bodyPart.subLocation}}<!--Check to see if there are sublocations and display them-->
                         {{#each bodyPart.subLocation as |subLocation locationId|}}<!--Loop through the sublocations-->
+                        {{#if subLocation.surfaceArea}}
                         <tr class="hit-locations">
                             <td>
                                 {{bodyPart.label}}
@@ -233,6 +234,7 @@
                                 {{subLocation.construction.minDR}} / <input type="number" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.selectedDR" value="{{subLocation.selectedDR}}" data-dtype="Number" style="width: 30px;"/> / {{subLocation.material.maxDR}}
                             </td>
                         </tr>
+                        {{/if}}
                         {{/each}}
                         {{else}}<!--Display details for parts without sublocations (Pretty much only the skull and brian)-->
                         <tr class="hit-locations">
