#55 Altering armour display so flexible is displayed instead of made as a checkbox.

--- a/templates/item/Custom Armour-sheet.html
+++ b/templates/item/Custom Armour-sheet.html
@@ -316,7 +316,7 @@
                             <div>{{subLocation.label}}</div>
                         </td>
                         <td class="dr-row">
-                            <input type="checkbox" name="data.armour.bodyType.body.{{partId}}.subLocation.{{locationId}}.flexible" {{checked subLocation.flexible}} data-dtype="Boolean" style="width: 100%;"/>
+                            {{subLocation.flexible}}
                         </td>
                         <td class="dr-row">
                             {{subLocation.drHardening}}
